--- a/styles/styles.less
+++ b/styles/styles.less
@@ -28,7 +28,7 @@ body {
   width: @square_side;
   height: @square_side;
   position: absolute;
-  background-color: cadetblue;
+  //background-color: cadetblue;
   border: 1px solid black;
   margin: 0 1px 1px 0;
 }
@@ -47,7 +47,6 @@ body {
   align-content: flex-start;
   border-right: none;
 }
-
 
 .hide {
   display: none;
