--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #eee;
+  background-color: #20232A;
   font: 14px/1.4 Arial, sans-serif;
   margin: 0;
   color: #333;
@@ -9,11 +9,12 @@ body {
 }
 .field-title {
   text-align: center;
+  color: #8AB4F8;
 }
 .take-block {
   width: 404px;
   height: 404px;
-  border: 2px solid black;
+  border: 2px solid #8AB4F8;
   border-right: none;
   cursor: grab;
 }
@@ -27,7 +28,7 @@ body {
 .put {
   width: 404px;
   height: 404px;
-  border: 2px solid black;
+  border: 2px solid #8AB4F8;
 }
 .put_net {
   display: flex;
@@ -39,8 +40,5 @@ body {
 }
 .hide {
   display: none;
-}
-.hovered {
-  background-color: rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=styles.css.map */
